# RuaBot

./: README.md  config.toml  package.json  pyproject.toml  requirements.txt  start.bat  start.sh
data/: ai_learning.db  onebot_framework.db  plugins.db
docker/: Dockerfile  docker-compose.yml
docs/: README.md  ai-features.md  architecture.md  installation.md  plugin-development.md  project-introduction.md
plugins/: __init__.py
plugins/kawaii_status/: README.md  __init__.py  color.py  data_source.py  drawer.py  main.py  model.py  path.py  plugin.json  utils.py
plugins/like_plugin/: README.md  main.py  plugin.json
plugins/so_good/: README.md  main.py  plugin.json
src/: __init__.py  main.py
src/ai/: __init__.py  ai_database.py  ai_database_models.py  ai_manager.py  brain_planner.py  chat_summarizer.py  expression_auto_checker.py  expression_learner.py  expression_reflector.py  expression_selector.py  frequency_control.py  group_profiler.py  heartflow_enhanced.py  init_ai_database.py  jargon_miner.py  learning_config.py  llm_client.py  maibot_handler.py  mcp_client.py  mcp_manager.py  memory_retrieval.py  message_handler.py  message_recorder.py  model_manager.py  person_profiler.py  replyer.py  sticker_integration.py  sticker_learner.py  sticker_manager.py  sticker_selector.py  thread_pool.py  tool_permission_manager.py  tools.py
src/core/: __init__.py  app.py  config.py  database.py  event_bus.py  logger.py  (+1 more)
webui/: INSTALL.md  README.md  build.bat  build.sh  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+84 files in other folders)
