[tool.poetry]
name = "xiaoyi-qq-framework"
version = "0.0.1"
description = "Xiaoyi_QQ - A modern, extensible OneBot protocol framework with Web UI and plugin system"
authors = ["ValkyrieEY <2477194503@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

